# employee_catalog_django_ddd

./: Makefile  README.md  pyproject.toml  tz.md
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/employees/: handlers.py  schemas.py
core/apps/common/: models.py
core/apps/employee/: admin.py  apps.py
core/apps/employee/filters/: employee.py
core/apps/employee/migrations/: 0001_initial.py
core/apps/employee/models/: __init__.py  employee.py
core/apps/employee/services/: employee.py
core/project/: urls.py
core/project/settings/: main.py
tests/factories/: employee.py
tests/services/: conftest.py  test_employee.py
